--- a/vue/vuex-mongo-user/package.json
+++ b/vue/vuex-mongo-user/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vuex-shop-cart",
+  "name": "vuex-mongo-user",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,7 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
-    "vuex": "^3.1.2",
-    "yixuanui": "^0.1.0"
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
