--- a/webpack/fe-workflow/webpack-build/package.json
+++ b/webpack/fe-workflow/webpack-build/package.json
@@ -17,7 +17,9 @@
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-typescript": "^7.9.4",
     "@babel/preset-env": "^7.9.5",
+    "@babel/preset-typescript": "^7.9.0",
     "babel-loader": "^8.1.0",
     "ora": "^4.0.3",
     "rimraf": "^3.0.2",
