--- a/electron/electron-quick-start/package.json
+++ b/electron/electron-quick-start/package.json
@@ -17,6 +17,7 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^9.0.0"
+    "devtron": "^1.4.0",
+    "electron": "^5.0.6"
   }
 }
